--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
     implementation group: 'org.apache.kafka', name: 'kafka-clients', version: '2.8.0'
     compile 'org.slf4j:slf4j-simple:1.7.30'
+    implementation group: 'org.apache.kafka', name: 'kafka-streams', version: '2.8.0'
 }
 
 test {
